# home

./: .gitignore  .travis.yml  Cargo.toml  README.md  test.html
errors/: 400.html  404.html  500.html  err.css
frontend/css/: common.css  contact.css  p-mp4-only.css  p-vimeo-only.css  p-yt-only.css  pink.css  plyr.css  red.css  show.css  show_expl.css  show_taste.css  talk.css  terms.css
frontend/scripts/: contact.zombie  explore.zombie  explore_grid.zombie  first6.zombie  first6_section.zombie  pink.zombie  plyr (copy 1).zombie  plyr.zombie  show.zombie  show_movie.zombie  talk.zombie  talk_post.zombie  terms.zombie
migrations/2018-12-31-223151_create_tables/: down.sql  up.sql
src/: api.rs  db.rs  main.rs  model.rs  schema.rs  session.rs
src/show/: api.rs  db.rs  mod.rs  model.rs
src/talk/: api.rs  db.rs  mltpart.rs  mod.rs  model.rs
templates/: contact.html  explore.html  index.html  talk.html  talk_form_1.html  talk_form_2.html  taste.html  terms.html
