[package]
name = "all"
version = "0.1.0"
authors = ["Lykrysh <lykrysh@gmail.com>"]
edition = "2018"

[dependencies]
actix = "*"
actix-web = "*"
dotenv = "0.13.0"
env_logger = "0.5.10"
futures = "0.1.22"
log = "0.4.3"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
json = "*"
num_cpus = "*"
chrono = { version = "*", features = ["serde"] }
askama = "0.7"

[dependencies.diesel]
features = ["postgres", "r2d2", "chrono"]
version = "1.3.2"

[build-dependencies]
askama = "0.7"
